--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "next": "latest",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -26,7 +26,7 @@
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "latest",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "typescript": "^5"
